--- a/src/components/common/cookies/cookies.css
+++ b/src/components/common/cookies/cookies.css
@@ -1,10 +1,15 @@
 .cookies{
     height: 93px;
+    width: 100%;
     background-color: #212834;
     font-size: 14px;
     line-height: 19px;
-    z-index: 2;
-    position: relative;
+    z-index: 50;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    margin-bottom: -93px;
+    opacity: 1;
 }
 
 .cookies__container{
@@ -21,12 +26,12 @@
     flex: 0 1 68%;
 }
 
-.cookies__button{
+.cookies__btn{
     position: absolute;
     right: 24px;
 }
 
-.cookies__button a{
+.cookies__btn button{
     width: 132px;
     height: 50px;
 
@@ -38,13 +43,13 @@
     border: 0.5px solid #FFFFFF;
     border-radius: 6px;
     text-decoration: none;
+    color: #FFFFFF;
 }
 
-.cookies__button a:hover{
+.cookies__btn button:hover{
     transform: scale(0.99);
     box-shadow: 0px 0px 20px -8px #000000 inset;
     font-size: 13.6px;
-
 }
 
 @media (max-width: 1270px) {
@@ -53,13 +58,13 @@
         margin: 0 15px;
     }
 
-    .cookies__button{
+    .cookies__btn{
         position: static;
     }
 }
 
 @media (max-width: 767px) {
-    .cookies__button a{
+    .cookies__btn button{
         width: 92px;
     }
 }
